--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
 }
 body{
   margin: 0;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Verdana, Geneva, sans-serif;
   font-size: 17px;
   color: #d3d3d3;
 }
@@ -26,15 +26,19 @@ body{
 #showcase div h1{
   font-size: 50px;
   line-height: 1.2;
+  color: white;
 }
 
 #showcase p{
   font-size: 20px;
+  padding: 20px 0 10px 0;
+  color: black;
 }
 #showcase nav{
   order: 1;
   flex-basis: 100%
   align-items: space-around;
+  padding-top: 2em;
 }
  #showcase .nav-button{
   font-size: 18px;
@@ -48,6 +52,21 @@ body{
 #showcase .nav-button:hover{
   background: #d3d3d3;
   color: #373434
+}
+#icons{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 0;
+}
+#icons li{
+  color: white;
+  font-size: 2em;
+  list-style-type: none;
+}
+#icons a{
+  color: white;
+  text-decoration: none;
 }
 
 #section-a{
@@ -65,9 +84,30 @@ body{
 
 #section-c{
   display: flex;
-  align-items: space-around;
+  flex-direction: column;
 }
 #section-c div{
   padding: 20px;
   color: black;
+}
+.box1{
+text-align: center;
+display: flex;
+flex-direction: column;
+}
+.box1 ul{
+  width: 80%;
+  margin: auto;
+  padding: 1.5em 0 1.5em 0;
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  justify-content: space-evenly;
+}
+.box1 ul a{
+  color: black;
+  text-decoration: none;
+}
+.box1 ul a:hover{
+  background: #f4f4f4;
 }
