--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@ body{
   color: #d3d3d3;
 }
 #showcase{
-  background-image: url('../photos/IMG_6259.jpeg');
+  background-color: #c3cbd8;
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -60,6 +60,7 @@ body{
 #icons{
   display:flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   padding: 0;
 }
@@ -67,6 +68,7 @@ body{
   color: white;
   font-size: 2em;
   list-style-type: none;
+
 }
 #icons a{
   color: white;
@@ -95,7 +97,7 @@ body{
 }
 .box1 h2{
   text-align: center;
-  font-size: 3em;
+  font-size: 2em;
 }
 .box1{
 text-align: center;
@@ -107,12 +109,14 @@ flex-direction: column;
   margin: auto;
   padding: 1.5em 0 1.5em 0;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   list-style-type: none;
 }
 .box1 ul li{
   margin: auto;
   font-size: 1.5em;
+  padding: 0 0.25em 0 0.25em;
 }
 .box1 ul a{
   color: black;
@@ -126,7 +130,7 @@ flex-direction: column;
 }
 @media only screen
   and (min-device-width: 320px)
-  and (max-device-width: 736px)
+  and (max-device-width: 680px)
   and (orientation: portrait) {
     #showcase{
       justify-content: space-between;
@@ -134,7 +138,7 @@ flex-direction: column;
     #showcase nav{
       display: flex;
       flex-direction: column;
-      align-items: space-around;
+      align-items: space-between;
       padding-top: 3em
     }
     #showcase .nav-button{
@@ -154,6 +158,9 @@ flex-direction: column;
      padding: 1.5em 0 1em 0;
      color: white;
    }
+   #section-a p{
+     font-size: 2em;
+   }
    #icons li{
      color: white;
      font-size: 5em;
@@ -161,6 +168,7 @@ flex-direction: column;
    }
    .box1 h2{
      text-align: center;
+     font-size: 3.2em
    }
    .box1{
    text-align: center;
