--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,14 +138,14 @@ flex-direction: column;
       display: flex;
       flex-direction: column;
       align-items: space-between;
-      padding-top: 3em
+
     }
     #showcase .nav-button{
      font-size: 3em;
      text-decoration: none;
      color: black;
      border: black 1px solid;
-     padding: 1em 2em;
+     padding-top: 1em;
      border-radius: 10px;
      margin: 20px;
    }
