--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,8 +148,7 @@ flex-direction: column;
      border: black 1px solid;
      padding-top: 1em;
      border-radius: 10px;
-     width: 40%;
-     margin: auto;
+     order:1;
    }
    #showcase div{
      padding-bottom: 10em;
