--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,195 +1,93 @@
 *{
   margin:0;
-  padding: 0:
-}
-body{
-  margin: 0;
-  font-family: Verdana, Geneva, sans-serif;
-  font-size: 17px;
-  color: #d3d3d3;
-}
-#showcase{
-  background-color: #c3cbd8;
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  z-index: -10;
-}
-#showcase div{
-  order: 3;
-}
-#showcase div h1{
-  font-size: 3em;
-  line-height: 1.2;
-  color: white;
-}
-
-#showcase p{
-  font-size: 1.5em;
-  padding: 1.5em 0 1em 0;
-  color: black;
-}
-#showcase nav{
-  display: inline-flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  order: 1;
-  align-items: space-around;
-  padding: 2em 0 6em 0;
-}
-
- #showcase .nav-button{
-   display: flex;
-   justify-content: center;
-   text-align: center;
-  font-size: 1em;
-  text-decoration: none;
-  color: black;
-  border: black 1px solid;
-  padding: 10px 20px;
-  border-radius: 10px;
-  margin: 20px;
-  flex-grow: 1;
-}
-#showcase .nav-button:hover{
-  background: #d3d3d3;
-  color: #373434
-}
-#icons{
-  display:flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
   padding: 0;
 }
-#icons li{
-  color: white;
-  font-size: 2em;
-  list-style-type: none;
-
+body{
+  font-family: 'Cantarell', sans-serif;
 }
-#icons a{
-  color: white;
+body a{
   text-decoration: none;
 }
+#landing{
+  /* The image used */
+background-image: url("../photos/mountain.jpg");
 
-#section-a{
-  padding: 20px;
-  background: #f4f4f4;
-  color:#373434;
-  text-align: center;
-}
-#section-a p{
-  width: 80%;
-  margin: auto;
-  font-size: 1em;
-}
+/* Full height */
+height: 100vh;
 
-#section-c{
-  display: flex;
-  flex-direction: column;
-}
-#section-c div{
-  padding: 20px;
-  color: black;
-}
-.box1 h2{
-  text-align: center;
-  font-size: 2em;
-}
-.box1{
-text-align: center;
+/* Center and scale the image nicely */
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
 display: flex;
 flex-direction: column;
+justify-content: space-evenly;
+align-items: center;
+color: white;
 }
-.box1 ul{
-  width: 80%;
-  margin: auto;
-  padding: 1.5em 0 1.5em 0;
+#title{
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+#landing nav{
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+}
+
+#landing nav a{
+  color: white;
+  text-decoration: none;
+  font-size: 2em;
+  font-family: 'Cantarell', sans-serif;
+  border: none;
+}
+
+
+#title h1{
+  font-size: 4em;
+}
+
+.icons {
+  display: flex;
+  width: 30%;
+  justify-content: space-around;
   list-style-type: none;
 }
-.box1 ul li{
+.icons a{
+  color: white;
+  font-size: 2em;
+}
+#section-a{
+  background-color: #f1f1f1;
+}
+.box-header{
+  font-size: 2.5em;
+  text-align: center;
   margin: auto;
+}
+#section-a p{
+  text-align: center;
+  width: 80%;
+  margin: auto;
+}
+#section-b div, #section-a{
+  padding-bottom: 2em;
+}
+.box ul{
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  width: 80%;
+  margin: auto;
+}
+.box li{
+  padding: 0;
   font-size: 1.5em;
-  padding: 0 0.25em 0 0.25em;
 }
-.box1 ul a{
-  color: black;
-  text-decoration: none;
-}
-.box1 ul a:hover{
-  background: #f4f4f4;
-}
-#projects{
-  background: #f4f4f4;
-}
-@media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 680px) {
-    #showcase{
-      justify-content: space-between;
-    }
-    #showcase nav{
-      display: flex;
-      flex-direction: column;
-      align-items: space-between;
-
-    }
-    #showcase .nav-button{
-     font-size: 3em;
-     text-decoration: none;
-     text-align: center;
-     color: black;
-     border: black 1px solid;
-     padding-top: 1em;
-     border-radius: 10px;
-     order:2;
-   }
-   #showcase div{
-     padding-bottom: 10em;
-   }
-   #showcase p{
-     font-size: 1.5em;
-     padding: 1.5em 0 1em 0;
-     color: white;
-   }
-   #section-a p{
-     font-size: 2em;
-   }
-   #icons li{
-     color: white;
-     font-size: 5em;
-     list-style-type: none;
-   }
-   .box1 h2{
-     text-align: center;
-     font-size: 3.2em
-   }
-   .box1{
-   text-align: center;
-   display: flex;
-   flex-direction: column;
-   }
-   .box1 ul {
-     width: 90%;
-     margin: auto;
-     padding: 1.5em 0 1.5em 0;
-     display: flex;
-     flex-wrap: wrap;
-     flex-direction: column;
-     list-style-type: none;
-   }
-   .box1 ul li{
-     margin: auto;
-     font-size: 3em;
-     order: 1;
-   }
+.b2{
+  background-color: #f1f1f1;
 }
