--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body{
-  font-family: 'Cantarell', sans-serif;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
 body a{
   text-decoration: none;
