--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,21 +10,30 @@ body a{
   text-decoration: none;
 }
 #landing{
-  /* The image used */
-background-image: url("../photos/mountain.jpg");
 
 /* Full height */
 height: 100vh;
 
 /* Center and scale the image nicely */
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
+
 display: flex;
 flex-direction: column;
 justify-content: space-evenly;
 align-items: center;
-color: white;
+color: black;
+}
+.background-image{
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background-image: url("../photos/computer.jpg");
+  background-size: cover;
+  opacity: 0.3;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 #title{
   display: flex;
@@ -37,7 +46,7 @@ color: white;
 
 @keyframes slidefade {
 100%{
-  opacity: 0.75;
+  opacity: 1;
   margin: 0;
 }
 }
@@ -52,7 +61,7 @@ color: white;
 }
 @keyframes fadein {
   100%{
-    opacity:0.75;
+    opacity:1;
   }
 }
 @media screen and (max-width: 600px) {
@@ -68,7 +77,7 @@ color: white;
 
 #landing nav a{
   flex: 1;
-  color: white;
+  color: black;
   text-decoration: none;
   font-size: 2em;
   font-family: Raleway;
@@ -102,7 +111,7 @@ color: white;
   list-style-type: none;
 }
 .icons a{
-  color: white;
+  color: black;
   font-size: 2em;
 }
 #section-a{
