--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,9 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 37.5em) {
+    html {
+      font-size: 48%; } }
   @media (max-width: 75em) {
     html {
       font-size: 56.25%; } }
@@ -41,12 +44,12 @@ body {
   color: black; }
   .heading-primary--main {
     font-size: 6rem; }
-    @media (max-width: 56.25em) {
+    @media (max-width: 37.5em) {
       .heading-primary--main {
         font-size: 3rem; } }
   .heading-primary--sub {
     font-size: 3rem; }
-    @media (max-width: 56.25em) {
+    @media (max-width: 37.5em) {
       .heading-primary--sub {
         font-size: 1.5rem; } }
 
@@ -103,7 +106,7 @@ body {
 .u-list {
   display: flex;
   justify-content: space-around; }
-  @media (max-width: 56.25em) {
+  @media (max-width: 37.5em) {
     .u-list {
       flex-direction: column;
       align-items: center; } }
@@ -114,7 +117,7 @@ body {
     padding: 0 2rem;
     width: 33.33%;
     text-align: center; }
-    @media (max-width: 56.25em) {
+    @media (max-width: 37.5em) {
       .u-list--item {
         padding: 1.5rem 0;
         width: 80%; } }
@@ -140,7 +143,7 @@ body {
     align-items: center;
     opacity: 0;
     animation: 1s slidefade 1s forwards; }
-    @media (max-width: 56.25em) {
+    @media (max-width: 37.5em) {
       .landing__title {
         padding-top: 2rem; } }
   .landing__nav {
@@ -150,7 +153,7 @@ body {
     align-items: center;
     opacity: 0;
     animation: 1s fadein 0.5s forwards; }
-    @media (max-width: 56.25em) {
+    @media (max-width: 37.5em) {
       .landing__nav {
         flex-direction: column;
         flex-grow: 1;
@@ -163,7 +166,7 @@ body {
     .landing__icons--link {
       color: black;
       font-size: 6em; }
-      @media (max-width: 56.25em) {
+      @media (max-width: 37.5em) {
         .landing__icons--link {
           font-size: 2rem; } }
 
